--- a/index.html
+++ b/index.html
@@ -2,42 +2,46 @@
 <html>
 <title>Enrique Alcaide Muñoz</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta content="width=device-width, initial-scale=1" name="viewport">
+<link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet">
 <head>
-	<link rel="stylesheet" href="styles.css">
-	<script src="carraouselScript.js"></script> 
+  <link href="styles.css" rel="stylesheet">
+  <script src="carraouselScript.js"></script>
 </head>
 <body>
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide">EAM</a>
+    <a class="w3-bar-item w3-button w3-wide" href="#home">EAM</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-      <a href="#work" class="w3-bar-item w3-button"></i>PROJECTS</a>
-      <a href="#skills" class="w3-bar-item w3-button"></i>SKILLS</a>
-      <a href="#contact" class="w3-bar-item w3-button"></i>CONTACT</a>
+      <a class="w3-bar-item w3-button" href="#about">ABOUT</a>
+      <a class="w3-bar-item w3-button" href="#work"></i>PROJECTS</a>
+      <a class="w3-bar-item w3-button" href="#skills"></i>SKILLS</a>
+      <a class="w3-bar-item w3-button" href="#contact"></i>CONTACT</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
+    <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" href="javascript:void(0)"
+       onclick="w3_open()">
       <i class="fa fa-bars"></i>
     </a>
   </div>
 </div>
 
 <!-- Sidebar on small screens when clicking the menu icon -->
-<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button"><b>ABOUT</b></a>
-  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button"><b>PROJECTS</b></a>
-    <a href="#skills" onclick="w3_close()" class="w3-bar-item w3-button"><b>SKILLS</b></a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button"><b>CONTACT</b></a>
+<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large"
+     id="mySidebar" style="display:none">
+  <a class="w3-bar-item w3-button w3-large w3-padding-16" href="javascript:void(0)"
+     onclick="w3_close()">Close ×</a>
+  <a class="w3-bar-item w3-button" href="#about" onclick="w3_close()"><b>ABOUT</b></a>
+  <a class="w3-bar-item w3-button" href="#work" onclick="w3_close()"><b>PROJECTS</b></a>
+  <a class="w3-bar-item w3-button" href="#skills" onclick="w3_close()"><b>SKILLS</b></a>
+  <a class="w3-bar-item w3-button" href="#contact" onclick="w3_close()"><b>CONTACT</b></a>
 </nav>
 
 <!-- Header with full-height image -->
@@ -46,72 +50,94 @@
     <span class="w3-jumbo w3-hide-small"><b>Enrique Alcaide Muñoz</b></span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Enrique Alcaide Muñoz</span><br>
     <span class="w3-large heading2 letter">Back End Developer</span><br>
-    <span class="w3-large heading3 letter2"><i>"Sociable, hardworker and positive atittude"</i></span>
-  </div> 
+    <span
+        class="w3-large heading3 letter2"><i>"Sociable, hardworker and positive atittude"</i></span>
+  </div>
   <div class="w3-display-bottomleft w3-text-white w3-xlarge" style="padding:24px 48px">
     <a href="" title="Facebook"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-    <a href="https://www.instagram.com/kike_alc92/?hl=en" title="Instagram"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-    <a href="https://es.linkedin.com/in/enrique-alcaide-muñoz-93a2a978" title="Linkedin"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-    <a href="https://github.com/Enrique92" title="GitHub"><i class="fa fa-github w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/kike_alc92/?hl=en" title="Instagram"><i
+        class="fa fa-instagram w3-hover-opacity"></i></a>
+    <a href="https://es.linkedin.com/in/enrique-alcaide-muñoz-93a2a978" title="Linkedin"><i
+        class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://github.com/Enrique92" title="GitHub"><i
+        class="fa fa-github w3-hover-opacity"></i></a>
   </div>
-  <img src="/Images/Profile.jpg" class="profileImg">
+  <img class="profileImg" src="/Images/Profile.jpg">
 </header>
 
 <!-- About Section -->
-<div class="w3-container" style="padding:26px 16px" id="about">
+<div class="w3-container" id="about" style="padding:26px 16px">
   <h3 class="w3-center"><b>ABOUT ME</b></h3>
   <div class="w3-row-padding w3-center letter aboutMe" style="margin-top:8px;">
-     <p>My name is Enrique Alcaide Munoz I'm a Back-End Developer. I believe that many oppotunities are once in a lifetime, so I try to take the advantage of every opportunity I encourage to learn as much as possible. I'm a hard work developer who is passionate about coding, and am always eager to learn. I hope to get the opportunity to connect in the future.
-</p>
+    <p>My name is Enrique Alcaide Munoz I'm a Back-End Developer. I believe that many oppotunities
+      are once in a lifetime, so I try to take the advantage of every opportunity I encourage to
+      learn as much as possible. I'm a hard work developer who is passionate about coding, and am
+      always eager to learn. I hope to get the opportunity to connect in the future.
+    </p>
   </div>
 </div>
 
 <!-- Projects Section -->
 
 ///////
-<div class="w3-container" style="padding:26px 16px" id="work">
+<div class="w3-container" id="work" style="padding:26px 16px">
   <h3 class="w3-center"><b>PROJECTS</b></h3>
-	<div id="carrusel">
-		<a href="#" class="left-arrow"><img src="images/left-arrow.png" /></a>
-		<a href="#" class="right-arrow"><img src="images/right-arrow.png" /></a>
-		<div class="carrusel">
-			<div class="projects" id="product_0">
-				<a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
-				<img src="/Images/FunWithBeer.png" style="width:67%" class="w3-hover-opacity center">
-				</a>
-					<p class="descProjects"><b><u>Fun With Beer</u></b> - This is a app that provide to you information about the different types of beers of each country. You can view the beer from different forms, you can see by type of beer or you can see by continent.
-				</p>
-			</div>
-			<div class="projects" id="project1">
-				<a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
-				 <img src="/Images/SilverBullet.png" style="width:97%" class="w3-hover-opacity">
-				</a>
-					<p class="descProjects"><b><u>Silver Bullet</u></b> - This game was the final project of Java for the Cornerstone International Community College of Canada, develop with JavaFX and dividing the tasks between four teammates with a extraordinary teamwork and doing very enjoyable and funny.
-				 </p>
-			</div>
-			<div class="projects" id="project2">
-				<a href="https://github.com/Enrique92/Enrique92.github.io" title="Enrique Alcaide Muñoz Web Page">
-				<img src="/Images/MyPersonalWeb.png" style="width:100%" class="w3-hover-opacity">
-				</a>
-					<p class="descProjects"><b><u>Personal Web Page</u></b> - This is my personal web page where you can see more about myself and my personal and team projects. Also you can see more about me and my developer skills.
-				 </p>
-			</div>
-			<div class="projects" id="project3">
-				<a href="https://manzana86.neocities.org/web_lga/localizacion_propio.html" title="Department of Applied Geography UAM">
-				<img src="/Images/LabGeoApl.png" style="width:100%" class="w3-hover-opacity">
-				</a>
-					<p class="descProjects"><b><u>Applied Geography Laboratory</u></b> - This was the main web page for the applied geography laboratory of University Autonoma of Madrid where you can see the main content and information about the area.
-				</p>
-			</div>
-			<div class="projects" id="project4">
-				<a href="https://github.com/cornerstone18aug/Tydier" title="Tydier">
-				<img src="/Images/TydierApp.png" style="width:100%" class="w3-hover-opacity">
-				</a>
-					<p class="descProjects"><b><u>Tydier</u></b> - This app is an Automatic Bookmark Categorizing iOS App using IBM Watson Natural Language Understanding API. Will help you to have all your bookmarks organized easily and fast.
-				</p>
-			</div>
-		</div>
-	</div>
+  <div class="w3-col l3 m6">
+    <div id="carrusel">
+      <a class="left-arrow" href="#"><img src="images/left-arrow.png"/></a>
+      <a class="right-arrow" href="#"><img src="images/right-arrow.png"/></a>
+      <div class="carrusel">
+        <div class="projects" id="product_0">
+          <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
+            <img class="w3-hover-opacity center" src="/Images/FunWithBeer.png" style="width:67%">
+          </a>
+          <p class="descProjects"><b><u>Fun With Beer</u></b> - This is a app that provide to you
+            information about the different types of beers of each country. You can view the beer
+            from different forms, you can see by type of beer or you can see by continent.
+          </p>
+        </div>
+        <div class="projects" id="project1">
+          <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
+            <img class="w3-hover-opacity" src="/Images/SilverBullet.png" style="width:97%">
+          </a>
+          <p class="descProjects"><b><u>Silver Bullet</u></b> - This game was the final project of
+            Java for the Cornerstone International Community College of Canada, develop with JavaFX
+            and dividing the tasks between four teammates with a extraordinary teamwork and doing
+            very enjoyable and funny.
+          </p>
+        </div>
+        <div class="projects" id="project2">
+          <a href="https://github.com/Enrique92/Enrique92.github.io"
+             title="Enrique Alcaide Muñoz Web Page">
+            <img class="w3-hover-opacity" src="/Images/MyPersonalWeb.png" style="width:100%">
+          </a>
+          <p class="descProjects"><b><u>Personal Web Page</u></b> - This is my personal web page
+            where you can see more about myself and my personal and team projects. Also you can see
+            more about me and my developer skills.
+          </p>
+        </div>
+        <div class="projects" id="project3">
+          <a href="https://manzana86.neocities.org/web_lga/localizacion_propio.html"
+             title="Department of Applied Geography UAM">
+            <img class="w3-hover-opacity" src="/Images/LabGeoApl.png" style="width:100%">
+          </a>
+          <p class="descProjects"><b><u>Applied Geography Laboratory</u></b> - This was the main web
+            page for the applied geography laboratory of University Autonoma of Madrid where you can
+            see the main content and information about the area.
+          </p>
+        </div>
+        <div class="projects" id="project4">
+          <a href="https://github.com/cornerstone18aug/Tydier" title="Tydier">
+            <img class="w3-hover-opacity" src="/Images/TydierApp.png" style="width:100%">
+          </a>
+          <p class="descProjects"><b><u>Tydier</u></b> - This app is an Automatic Bookmark
+            Categorizing iOS App using IBM Watson Natural Language Understanding API. Will help you
+            to have all your bookmarks organized easily and fast.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <!--
 <div class="w3-container" style="padding:26px 16px" id="work">
@@ -151,73 +177,81 @@ Department of Applied Geography UAM">
 -->
 
 <!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright" title="Close Modal Image">×</span>
+<div class="w3-modal w3-black" id="modal01" onclick="this.style.display='none'">
+  <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright"
+        title="Close Modal Image">×</span>
   <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
+    <img class="w3-image" id="img01">
+    <p class="w3-opacity w3-large" id="caption"></p>
   </div>
 </div>
 
 <!-- Skills Section -->
-<div class="w3-container w3-light-grey" style="padding:26px 16px" id="skills">
+<div class="w3-container w3-light-grey" id="skills" style="padding:26px 16px">
   <h3 class="w3-center"><b>SKILLS</b></h3>
-    <div class="w3-col m6">
-      <p><b><i><u>Languages:</u></i></b></p>
-      	<p class="w3-wide"><i class="fa"></i> - Java</p>
-        <p class="w3-wide"><i class="fa"></i> - Swift</p>
-        <p class="w3-wide"><i class="fa"></i> - HTML</p>
-        <p class="w3-wide"><i class="fa"></i> - CSS</p>
-        <p class="w3-wide"><i class="fa"></i> - JavaScript</p>
-        <p class="w3-wide"><i class="fa"></i> - LN4</p>
-      <p><b><i><u>IDE's:</u></i></b></p>
-        <p class="w3-wide"><i class="fa"></i> - Xcode</p>
-        <p class="w3-wide"><i class="fa"></i> - Eclipse</p>
-        <p class="w3-wide"><i class="fa"></i> - IntelliJ IDEA</p>
-        <p class="w3-wide"><i class="fa"></i> - PeopleNet</p>
-    </div>
-    <div class="w3-col m6">
-      <p><b><i><u>Web Frameworks:</u></i></b></p>
-      	<p class="w3-wide"><i class="fa"></i> - Spring</p>
-      <p><b><i><u>Databases:</u></i></b></p>
-        <p class="w3-wide"><i class="fa"></i> - Oracle</p>
-      	<p class="w3-wide"><i class="fa"></i> - MySQL</p>
-        <p class="w3-wide"><i class="fa"></i> - Firebase</p>
-        <p class="w3-wide"><i class="fa"></i> - SQLite</p>
-      <p><b><i><u>Version Control:</u></i></b></p>
-      	<p class="w3-wide"><i class="fa"></i> - GitHub</p>
-        <p class="w3-wide"><i class="fa"></i> - GitKraken</p>
-      <p><b><i><u>Other:</u></i></b></p>
-      	<p class="w3-wide"><i class="fa"></i> - Ubuntu</p>
-        <p class="w3-wide"><i class="fa"></i> - Windows</p>
-        <p class="w3-wide"><i class="fa"></i> - WordPress</p>
-    </div>
+  <div class="w3-col m6">
+    <p><b><i><u>Languages:</u></i></b></p>
+    <p class="w3-wide"><i class="fa"></i> - Java</p>
+    <p class="w3-wide"><i class="fa"></i> - Swift</p>
+    <p class="w3-wide"><i class="fa"></i> - HTML</p>
+    <p class="w3-wide"><i class="fa"></i> - CSS</p>
+    <p class="w3-wide"><i class="fa"></i> - JavaScript</p>
+    <p class="w3-wide"><i class="fa"></i> - LN4</p>
+    <p><b><i><u>IDE's:</u></i></b></p>
+    <p class="w3-wide"><i class="fa"></i> - Xcode</p>
+    <p class="w3-wide"><i class="fa"></i> - Eclipse</p>
+    <p class="w3-wide"><i class="fa"></i> - IntelliJ IDEA</p>
+    <p class="w3-wide"><i class="fa"></i> - PeopleNet</p>
   </div>
+  <div class="w3-col m6">
+    <p><b><i><u>Web Frameworks:</u></i></b></p>
+    <p class="w3-wide"><i class="fa"></i> - Spring</p>
+    <p><b><i><u>Databases:</u></i></b></p>
+    <p class="w3-wide"><i class="fa"></i> - Oracle</p>
+    <p class="w3-wide"><i class="fa"></i> - MySQL</p>
+    <p class="w3-wide"><i class="fa"></i> - Firebase</p>
+    <p class="w3-wide"><i class="fa"></i> - SQLite</p>
+    <p><b><i><u>Version Control:</u></i></b></p>
+    <p class="w3-wide"><i class="fa"></i> - GitHub</p>
+    <p class="w3-wide"><i class="fa"></i> - GitKraken</p>
+    <p><b><i><u>Other:</u></i></b></p>
+    <p class="w3-wide"><i class="fa"></i> - Ubuntu</p>
+    <p class="w3-wide"><i class="fa"></i> - Windows</p>
+    <p class="w3-wide"><i class="fa"></i> - WordPress</p>
+  </div>
+</div>
 </div>
 
 <!-- Contact Section -->
-<div class="w3-container w3-light-grey" style="padding:26px 16px" id="contact">
+<div class="w3-container w3-light-grey" id="contact" style="padding:26px 16px">
   <h3 class="w3-center"><b>CONTACT</b></h3>
   <div style="margin-top:48px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>Vancouver, BC, Canada.</p>
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i>+1 (778) 689 5106</p>
-    <p><a href="mailto:enrique.alcaide.canadian@gmail.com?Subject=Contact" target="_top"><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i>enrique.alcaide.canadian@gmail.com</a></p>
+    <p><a href="mailto:enrique.alcaide.canadian@gmail.com?Subject=Contact" target="_top"><i
+        class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i>enrique.alcaide.canadian@gmail.com</a>
+    </p>
     <br>
   </div>
 </div>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey rounded"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a class="w3-button w3-light-grey rounded" href="#home"><i
+      class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="" title="Facebook"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-    <a href="https://www.instagram.com/kike_alc92/?hl=en" title="Instagram"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-    <a href="https://es.linkedin.com/in/enrique-alcaide-muñoz-93a2a978" title="Linkedin"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-    <a href="https://github.com/Enrique92" title="GitHub"><i class="fa fa-github w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/kike_alc92/?hl=en" title="Instagram"><i
+        class="fa fa-instagram w3-hover-opacity"></i></a>
+    <a href="https://es.linkedin.com/in/enrique-alcaide-muñoz-93a2a978" title="Linkedin"><i
+        class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://github.com/Enrique92" title="GitHub"><i
+        class="fa fa-github w3-hover-opacity"></i></a>
   </div>
-  <p>Created by <a href="" title="Enrique Alcaide Muñoz" target="_blank" class="w3-hover-text-green">Enrique Alcaide Muñoz</a></p>
+  <p>Created by <a class="w3-hover-text-green" href="" target="_blank"
+                   title="Enrique Alcaide Muñoz">Enrique Alcaide Muñoz</a></p>
 </footer>
- 
+
 <script>
 // Modal Image Gallery
 function onClick(element) {
@@ -239,6 +273,7 @@ function w3_open() {
 function w3_close() {
     mySidebar.style.display = "none";
 }
+
 </script>
 
 </body>
