--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
           <img class="w3-hover-opacity center" src="/Images/FunWithBeer.png" style="width:67%">
         </a>
-        <p class="descProjects"><b><u>Fun With Beer</u></b><br> This is a app that provide to you
+        <p class="descProjects"><b><u>Fun With Beer</u></b><br><br> This is a app that provide to you
           information about the different types of beers of each country. You can view the beer
           from different forms, you can see by type of beer or you can see by continent.
         </p>
@@ -99,7 +99,7 @@
         <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
           <img class="w3-hover-opacity" src="/Images/SilverBullet.png" style="width:97%">
         </a>
-        <p class="descProjects"><b><u>Silver Bullet</u></b><br> This game was the final project of
+        <p class="descProjects"><b><u>Silver Bullet</u></b><br><br> This game was the final project of
           Java for the Cornerstone International Community College of Canada, develop with JavaFX
           and dividing the tasks between four teammates with a extraordinary teamwork and doing
           very enjoyable and funny.
@@ -110,7 +110,7 @@
            title="Enrique Alcaide Muñoz Web Page">
           <img class="w3-hover-opacity" src="/Images/MyPersonalWeb.png" style="width:100%">
         </a>
-        <p class="descProjects"><b><u>Personal Web Page</u></b><br> This is my personal web page
+        <p class="descProjects"><b><u>Personal Web Page</u></b><br><br> This is my personal web page
           where you can see more about myself and my personal and team projects. Also you can see
           more about me and my developer skills.
         </p>
@@ -120,7 +120,7 @@
            title="Department of Applied Geography UAM">
           <img class="w3-hover-opacity" src="/Images/LabGeoApl.png" style="width:100%">
         </a>
-        <p class="descProjects"><b><u>Applied Geography Laboratory</u></b><br> This was the main web
+        <p class="descProjects"><b><u>Applied Geography Laboratory</u></b><br><br> This was the main web
           page for the applied geography laboratory of University Autonoma of Madrid where you can
           see the main content and information about the area.
         </p>
@@ -129,7 +129,7 @@
         <a href="https://github.com/cornerstone18aug/Tydier" title="Tydier">
           <img class="w3-hover-opacity" src="/Images/TydierApp.png" style="width:100%">
         </a>
-        <p class="descProjects"><b><u>Tydier</u></b><br> This app is an Automatic Bookmark
+        <p class="descProjects"><b><u>Tydier</u></b><br><br> This app is an Automatic Bookmark
           Categorizing iOS App using IBM Watson Natural Language Understanding API. Will help you
           to have all your bookmarks organized easily and fast.
         </p>
