--- a/index.html
+++ b/index.html
@@ -78,13 +78,11 @@
 </div>
 
 <!-- Projects Section -->
-
-///////
-<div class="w3-container" id="work" style="padding:26px 16px">
+<div <!-- class="w3-container"--> id="work" style="padding:26px 16px">
   <h3 class="w3-center"><b>PROJECTS</b></h3>
   <div id="carrusel">
-    <a class="left-arrow" href="#"><img src="images/left-arrow.png"/></a>
-    <a class="right-arrow" href="#"><img src="images/right-arrow.png"/></a>
+    <a class="left-arrow" href="#"><img src="/Images/left-arrow.png"/></a>
+    <a class="right-arrow" href="#"><img src="/Images/right-arrow.png"/></a>
     <div class="carrusel">
       <div class="projects" id="product_0">
         <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
