--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </div>
 
 <!-- Projects Section -->
-<div <!-- class="w3-container"--> id="work" style="padding:26px 16px">
+<div class="w3-container" id="work" style="padding:26px 16px">
   <h3 class="w3-center"><b>PROJECTS</b></h3>
   <div id="carrusel">
     <a class="left-arrow" href="#"><img src="/Images/left-arrow.png"/></a>
@@ -125,7 +125,7 @@
       </div>
       <div class="projects" id="project4">
         <a href="https://github.com/cornerstone18aug/Tydier" title="Tydier">
-          <img class="w3-hover-opacity" src="/Images/TydierApp.png" style="width:100%">
+          <img class="w3-hover-opacity" src="/Images/TydierApp.png" style="width:80%">
         </a>
         <p class="descProjects"><b><u>Tydier</u></b><br><br> This app is an Automatic Bookmark
           Categorizing iOS App using IBM Watson Natural Language Understanding API. Will help you
