--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       rel="stylesheet">
 <head>
   <link href="styles.css" rel="stylesheet">
-  <script src="carraouselScript.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -80,60 +81,81 @@
 <!-- Projects Section -->
 <div class="w3-container" id="work" style="padding:26px 16px">
   <h3 class="w3-center"><b>PROJECTS</b></h3>
-  <div id="carrusel">
-    <a class="left-arrow" href="#"><img src="/Images/left-arrow.png"/></a>
-    <a class="right-arrow" href="#"><img src="/Images/right-arrow.png"/></a>
-    <div class="carrusel">
-      <div class="projects" id="product_0">
-        <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
-          <img class="w3-hover-opacity center" src="/Images/FunWithBeer.png" style="width:67%">
-        </a>
-        <p class="descProjects"><b><u class="center">Fun With Beer</u></b><br><br> This is a app that provide to you
-          information about the different types of beers of each country. You can view the beer
-          from different forms, you can see by type of beer or you can see by continent.
-        </p>
+  <div class="container">
+    <div class="carousel slide" data-ride="carousel" id="myCarousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li class="active" data-slide-to="0" data-target="#myCarousel"></li>
+        <li data-slide-to="1" data-target="#myCarousel"></li>
+        <li data-slide-to="2" data-target="#myCarousel"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
+            <img class="w3-hover-opacity center" src="/Images/FunWithBeer.png" style="width:67%">
+          </a>
+          <p class="descProjects"><b><u>Fun With Beer</u></b> - This is a app that provide to you
+            information about the different types of beers of each country. You can view the beer
+            from different forms, you can see by type of beer or you can see by continent.
+          </p>
+        </div>
+
+        <div class="item">
+          <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
+            <img class="w3-hover-opacity" src="/Images/SilverBullet.png" style="width:97%">
+          </a>
+          <p class="descProjects"><b><u>Silver Bullet</u></b> - This game was the final project of
+            Java for the Cornerstone International Community College of Canada, develop with JavaFX
+            and dividing the tasks between four teammates with a extraordinary teamwork and doing
+            very enjoyable and funny.
+          </p>
+        </div>
+
+        <div class="item">
+          <a href="https://github.com/Enrique92/FunWithBeer" title="Enrique Alcaide Muñoz Web Page">
+            <img class="w3-hover-opacity" src="/Images/MyPersonalWeb.png" style="width:100%">
+          </a>
+          <p class="descProjects"><b><u>Personal Web Page</u></b> - This is my personal web page
+            where you can see more about myself and my personal and team projects. Also you can see
+            more about me and my developer skills.
+          </p>
+        </div>
+
+        <div class="item">
+          <a href="https://manzana86.neocities.org/web_lga/localizacion_propio.html" title="Department of Applied Geography UAM">
+            <img class="w3-hover-opacity" src="/Images/LabGeoApl.png" style="width:100%">
+          </a>
+          <p class="descProjects"><b><u>Applied Geography Laboratory</u></b> - This was the main web
+            page for the applied geography laboratory of University Autonoma of Madrid where you can
+            see the main content and information about the area.
+          </p>
+        </div>
+
+        <div class="item">
+          <a href="https://github.com/cornerstone18aug/Tydier" title="Tydier">
+            <img class="w3-hover-opacity" src="/Images/TydierApp.png" style="width:65%">
+          </a>
+          <p class="descProjects"><b><u>Tydier</u></b> - This app is an Automatic Bookmark
+            Categorizing iOS App using IBM Watson Natural Language Understanding API. Will help you
+            to have all your bookmarks organized easily and fast.
+          </p>
+        </div>
       </div>
-      <div class="projects" id="project1">
-        <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
-          <img class="w3-hover-opacity" src="/Images/SilverBullet.png" style="width:97%">
-        </a>
-        <p class="descProjects"><b><u class="center">Silver Bullet</u></b><br><br> This game was the final project of
-          Java for the Cornerstone International Community College of Canada, develop with JavaFX
-          and dividing the tasks between four teammates with a extraordinary teamwork and doing
-          very enjoyable and funny.
-        </p>
-      </div>
-      <div class="projects" id="project2">
-        <a href="https://github.com/Enrique92/Enrique92.github.io"
-           title="Enrique Alcaide Muñoz Web Page">
-          <img class="w3-hover-opacity" src="/Images/MyPersonalWeb.png" style="width:100%">
-        </a>
-        <p class="descProjects"><b><u class="center">Personal Web Page</u></b><br><br> This is my personal web page
-          where you can see more about myself and my personal and team projects. Also you can see
-          more about me and my developer skills.
-        </p>
-      </div>
-      <div class="projects" id="project3">
-        <a href="https://manzana86.neocities.org/web_lga/localizacion_propio.html"
-           title="Department of Applied Geography UAM">
-          <img class="w3-hover-opacity" src="/Images/LabGeoApl.png" style="width:100%">
-        </a>
-        <p class="descProjects"><b><u class="center">Applied Geography Laboratory</u></b><br><br> This was the main web
-          page for the applied geography laboratory of University Autonoma of Madrid where you can
-          see the main content and information about the area.
-        </p>
-      </div>
-      <div class="projects" id="project4">
-        <a href="https://github.com/cornerstone18aug/Tydier" title="Tydier">
-          <img class="w3-hover-opacity" src="/Images/TydierApp.png" style="width:70%">
-        </a>
-        <p class="descProjects"><b><u class="center">Tydier</u></b><br><br> This app is an Automatic Bookmark
-          Categorizing iOS App using IBM Watson Natural Language Understanding API. Will help you
-          to have all your bookmarks organized easily and fast.
-        </p>
-      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" data-slide="prev" href="#myCarousel">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" data-slide="next" href="#myCarousel">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div>
+</div>
 </div>
 <!--
 <div class="w3-container" style="padding:26px 16px" id="work">
@@ -269,6 +291,8 @@ function w3_open() {
 function w3_close() {
     mySidebar.style.display = "none";
 }
+
+
 
 
 </script>
