--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
     <!--
     <div class="w3-container" style="padding:26px 16px" id="work">
       <h3 class="w3-center"><b>PROJECTS</b></h3>
