--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
       <div class="carousel-inner">
         <div class="item active">
           <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
-            <img alt="Fun With Beer" class="w3-hover-opacity center" src="/Images/FunWithBeer.png"
-                 style="width:67%">
+            <img alt="Fun With Beer" class="w3-hover-opacity center" src="/Images/FunWithBeer.png" style="width:50%">
           </a>
           <div class="carousel-caption">
             <h3><u>Fun With Beer</u></h3>
@@ -112,15 +111,13 @@
 
         <div class="item">
           <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
-            <img alt="Silver Bullet" class="w3-hover-opacity" src="/Images/SilverBullet.png"
-                 style="width:97%">
+            <img alt="Silver Bullet" class="w3-hover-opacity" src="/Images/SilverBullet.png" style="width:50%">
           </a>
           <div class="carousel-caption">
             <h3><u>Silver Bullet</u></h3>
             <p class="descProjects"> This game was the final project of
               Java for the Cornerstone International Community College of Canada, develop with
-              JavaFX
-              and dividing the tasks between four teammates with a extraordinary teamwork and doing
+              JavaFX and dividing the tasks between four teammates with a extraordinary teamwork and doing
               very enjoyable and funny.
             </p>
           </div>
@@ -128,24 +125,20 @@
 
         <div class="item">
           <a href="https://github.com/Enrique92/FunWithBeer" title="Personal Web Page">
-            <img alt="Personal Web Page" class="w3-hover-opacity" src="/Images/MyPersonalWeb.png"
-                 style="width:100%">
+            <img alt="Personal Web Page" class="w3-hover-opacity" src="/Images/MyPersonalWeb.png" style="width:50%">
           </a>
           <div class="carousel-caption">
             <h3><u>Personal Web Page</u></h3>
             <p class="descProjects"> This is my personal web page
               where you can see more about myself and my personal and team projects. Also you can
-              see
-              more about me and my developer skills.
+              see more about me and my developer skills.
             </p>
           </div>
 
           <div class="item">
             <a href="https://manzana86.neocities.org/web_lga/localizacion_propio.html"
                title="Department of Applied Geography UAM">
-              <img alt="Department of Applied Geography UAM" class="w3-hover-opacity"
-                   src="/Images/LabGeoApl.png"
-                   style="width:100%">
+              <img alt="Applied Geography Laboratory" class="w3-hover-opacity" src="/Images/LabGeoApl.png" style="width:50%">
             </a>
             <div class="carousel-caption">
               <h3><u>Applied Geography Laboratory</u></h3>
@@ -157,8 +150,7 @@
 
             <div class="item">
               <a href="https://github.com/cornerstone18aug/Tydier" title="Tydier">
-                <img alt="Tydier" class="w3-hover-opacity" src="/Images/TydierApp.png"
-                     style="width:65%">
+                <img alt="Tydier" class="w3-hover-opacity" src="/Images/TydierApp.png" style="width:50%">
               </a>
               <div class="carousel-caption">
                 <h3><u>Tydier</u></h3>
