--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </div>
 
 <!-- Projects Section -->
-<div class="w3-container" id="work" style="padding:26px 16px">
+<div <!-- class="w3-container"--> id="work" style="padding:26px 16px">
   <h3 class="w3-center"><b>PROJECTS</b></h3>
   <div class="container">
     <div class="carousel slide" data-ride="carousel" id="myCarousel">
@@ -91,7 +91,7 @@
         <li data-slide-to="1" data-target="#myCarousel"></li>
         <li data-slide-to="2" data-target="#myCarousel"></li>
         <li data-slide-to="3" data-target="#myCarousel"></li>
-        <li data-slide-to="4" data-target="#myCarousel"></li>
+        <li data-slide-to="3" data-target="#myCarousel"></li>
       </ol>
 
       <!-- Wrapper for slides -->
