--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
         <li class="active" data-slide-to="0" data-target="#myCarousel"></li>
         <li data-slide-to="1" data-target="#myCarousel"></li>
         <li data-slide-to="2" data-target="#myCarousel"></li>
-        <li data-slide-to="3" data-target="#myCarousel"></li>
-        <li data-slide-to="3" data-target="#myCarousel"></li>
-      </ol>
+        <!-- <li data-slide-to="3" data-target="#myCarousel"></li>
+         <li data-slide-to="3" data-target="#myCarousel"></li>-->
+       </ol>
 
-      <!-- Wrapper for slides -->
+       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
           <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
-            <img alt="Fun With Beer" class="w3-hover-opacity center" src="/Images/FunWithBeer.png" style="width:50%">
+            <img alt="Fun With Beer" class="w3-hover-opacity center" src="/Images/FunWithBeer.png" style="width:40%">
           </a>
           <div class="carousel-caption">
             <h3><u>Fun With Beer</u></h3>
@@ -111,7 +111,7 @@
 
         <div class="item">
           <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
-            <img alt="Silver Bullet" class="w3-hover-opacity" src="/Images/SilverBullet.png" style="width:50%">
+            <img alt="Silver Bullet" class="w3-hover-opacity" src="/Images/SilverBullet.png" style="width:80%">
           </a>
           <div class="carousel-caption">
             <h3><u>Silver Bullet</u></h3>
@@ -125,7 +125,7 @@
 
         <div class="item">
           <a href="https://github.com/Enrique92/FunWithBeer" title="Personal Web Page">
-            <img alt="Personal Web Page" class="w3-hover-opacity" src="/Images/MyPersonalWeb.png" style="width:50%">
+            <img alt="Personal Web Page" class="w3-hover-opacity" src="/Images/MyPersonalWeb.png" style="width:60%">
           </a>
           <div class="carousel-caption">
             <h3><u>Personal Web Page</u></h3>
