--- a/index.html
+++ b/index.html
@@ -80,110 +80,128 @@
   </div>
 </div>
 
-<!-- Projects Section -->
-<div <!-- class="w3-container"--> id="work" style="padding:26px 16px">
-<h3 class="w3-center"><b>PROJECTS</b></h3>
-<div class="container">
-  <div class="carousel slide" data-ride="carousel" id="myCarousel">
+
+<div class="w3-container" id="work" style="padding:26px 16px">
+  <h3 class="w3-center"><b>PROJECTS</b></h3>
+  <div class="carousel slide carousel-multi-item v-2" data-ride="carousel"
+       id="carousel-example-multi">
+
+    <!--Controls-->
+    <div class="controls-top">
+      <a class="btn-floating" data-slide="prev" href="#carousel-example-multi"><i
+          class="fas fa-chevron-left"></i></a>
+      <a class="btn-floating" data-slide="next" href="#carousel-example-multi"><i
+          class="fas fa-chevron-right"></i></a>
+    </div>
+    <!--/.Controls-->
+
     <!-- Indicators -->
     <ol class="carousel-indicators">
-      <li class="active" data-slide-to="0" data-target="#myCarousel"></li>
-      <li data-slide-to="1" data-target="#myCarousel"></li>
-      <li data-slide-to="2" data-target="#myCarousel"></li>
-      <!-- <li data-slide-to="3" data-target="#myCarousel"></li>
-       <li data-slide-to="3" data-target="#myCarousel"></li>-->
+      <li class="active" data-slide-to="0" data-target="#carousel-example-multi"></li>
+      <li data-slide-to="1" data-target="#carousel-example-multi"></li>
+      <li data-slide-to="2" data-target="#carousel-example-multi"></li>
+      <li data-slide-to="3" data-target="#carousel-example-multi"></li>
+      <li data-slide-to="4" data-target="#carousel-example-multi"></li>
+      <li data-slide-to="5" data-target="#carousel-example-multi"></li>
     </ol>
+    <!--/.Indicators-->
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
-          <img alt="Fun With Beer" class="w3-hover-opacity center" src="/Images/FunWithBeer.png"
-               style="width:40%">
-        </a>
-        <div class="carousel-caption">
-          <h3><u>Fun With Beer</u></h3>
-          <p class="descProjects"> This is a app that provide to you
-            information about the different types of beers of each country. You can view the beer
-            from different forms, you can see by type of beer or you can see by continent.
-          </p>
+    <div class="carousel-inner v-2" role="listbox">
+
+      <div class="carousel-item active">
+        <div class="col-12 col-md-4">
+          <div class="card mb-2">
+            <img alt="Card image cap" class="card-img-top"
+                 src="https://mdbootstrap.com/img/Photos/Others/img (36).jpg">
+            <div class="card-body">
+              <h4 class="card-title font-weight-bold">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up
+                the bulk of the
+                card's content.</p>
+              <a class="btn btn-primary btn-md btn-rounded">Button</a>
+            </div>
+          </div>
         </div>
       </div>
-
-      <div class="item">
-        <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
-          <img alt="Silver Bullet" class="w3-hover-opacity" src="/Images/SilverBullet.png"
-               style="width:80%">
-        </a>
-        <div class="carousel-caption">
-          <h3><u>Silver Bullet</u></h3>
-          <p class="descProjects"> This game was the final project of
-            Java for the Cornerstone International Community College of Canada, develop with
-            JavaFX and dividing the tasks between four teammates with a extraordinary teamwork and
-            doing
-            very enjoyable and funny.
-          </p>
+      <div class="carousel-item">
+        <div class="col-12 col-md-4">
+          <div class="card mb-2">
+            <img alt="Card image cap" class="card-img-top"
+                 src="https://mdbootstrap.com/img/Photos/Others/img (34).jpg">
+            <div class="card-body">
+              <h4 class="card-title font-weight-bold">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up
+                the bulk of the
+                card's content.</p>
+              <a class="btn btn-primary btn-md btn-rounded">Button</a>
+            </div>
+          </div>
         </div>
       </div>
-
-      <div class="item">
-        <a href="https://github.com/Enrique92/FunWithBeer" title="Personal Web Page">
-          <img alt="Personal Web Page" class="w3-hover-opacity" src="/Images/MyPersonalWeb.png"
-               style="width:60%">
-        </a>
-        <div class="carousel-caption">
-          <h3><u>Personal Web Page</u></h3>
-          <p class="descProjects"> This is my personal web page
-            where you can see more about myself and my personal and team projects. Also you can
-            see more about me and my developer skills.
-          </p>
+      <div class="carousel-item">
+        <div class="col-12 col-md-4">
+          <div class="card mb-2">
+            <img alt="Card image cap" class="card-img-top"
+                 src="https://mdbootstrap.com/img/Photos/Others/img (38).jpg">
+            <div class="card-body">
+              <h4 class="card-title font-weight-bold">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up
+                the bulk of the
+                card's content.</p>
+              <a class="btn btn-primary btn-md btn-rounded">Button</a>
+            </div>
+          </div>
         </div>
-        <!--
-
-<div class="item">
-  <a href="https://manzana86.neocities.org/web_lga/localizacion_propio.html"
-     title="Department of Applied Geography UAM">
-    <img alt="Applied Geography Laboratory" class="w3-hover-opacity" src="/Images/LabGeoApl.png" style="width:50%">
-  </a>
-  <div class="carousel-caption">
-    <h3><u>Applied Geography Laboratory</u></h3>
-    <p class="descProjects"> This was the main web page for the applied geography
-      laboratory of University Autonoma of Madrid where you can
-      see the main content and information about the area.
-    </p>
-  </div>
-
-  <div class="item">
-    <a href="https://github.com/cornerstone18aug/Tydier" title="Tydier">
-      <img alt="Tydier" class="w3-hover-opacity" src="/Images/TydierApp.png" style="width:50%">
-    </a>
-    <div class="carousel-caption">
-      <h3><u>Tydier</u></h3>
-      <p class="descProjects"> This app is an Automatic Bookmark
-        Categorizing iOS App using IBM Watson Natural Language Understanding API. Will
-        help you
-        to have all your bookmarks organized easily and fast.
-      </p>
+      </div>
+      <div class="carousel-item">
+        <div class="col-12 col-md-4">
+          <div class="card mb-2">
+            <img alt="Card image cap" class="card-img-top"
+                 src="https://mdbootstrap.com/img/Photos/Others/img (29).jpg">
+            <div class="card-body">
+              <h4 class="card-title font-weight-bold">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up
+                the bulk of the
+                card's content.</p>
+              <a class="btn btn-primary btn-md btn-rounded">Button</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="col-12 col-md-4">
+          <div class="card mb-2">
+            <img alt="Card image cap" class="card-img-top"
+                 src="https://mdbootstrap.com/img/Photos/Others/img (30).jpg">
+            <div class="card-body">
+              <h4 class="card-title font-weight-bold">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up
+                the bulk of the
+                card's content.</p>
+              <a class="btn btn-primary btn-md btn-rounded">Button</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="col-12 col-md-4">
+          <div class="card mb-2">
+            <img alt="Card image cap" class="card-img-top"
+                 src="https://mdbootstrap.com/img/Photos/Others/img (27).jpg">
+            <div class="card-body">
+              <h4 class="card-title font-weight-bold">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up
+                the bulk of the
+                card's content.</p>
+              <a class="btn btn-primary btn-md btn-rounded">Button</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+</div>
 
-  -->
-
-        <!-- Left and right controls -->
-        <a class="left carousel-control" data-slide="prev" href="#myCarousel">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" data-slide="next" href="#myCarousel">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-</div>
 <!--
 <div class="w3-container" style="padding:26px 16px" id="work">
   <h3 class="w3-center"><b>PROJECTS</b></h3>
@@ -318,6 +336,7 @@ function w3_open() {
 function w3_close() {
     mySidebar.style.display = "none";
 }
+
 
 
 
