--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+<script src="scripts.js"></script>
 <head>
   <link href="styles.css" rel="stylesheet">
 </head>
@@ -80,164 +81,116 @@
   </div>
 </div>
 
+<!--class="w3-container"-->
+<div id="work" style="padding:26px 16px">
+<h3 class="w3-center"><b>PROJECTS</b></h3>
+<div class="carousel slide carousel-multi-item v-2" data-ride="carousel"
+     id="carousel-example-multi">
 
-<div class="w3-container" id="work" style="padding:26px 16px">
-  <h3 class="w3-center"><b>PROJECTS</b></h3>
-  <div class="carousel slide carousel-multi-item v-2" data-ride="carousel"
-       id="carousel-example-multi">
+  <!--Controls-->
+  <div class="controls-top">
+    <a class="btn-floating" data-slide="prev" href="#carousel-example-multi"><i
+        class="fas fa-chevron-left"></i></a>
+    <a class="btn-floating" data-slide="next" href="#carousel-example-multi"><i
+        class="fas fa-chevron-right"></i></a>
+  </div>
+  <!--/.Controls-->
 
-    <!--Controls-->
-    <div class="controls-top">
-      <a class="btn-floating" data-slide="prev" href="#carousel-example-multi"><i
-          class="fas fa-chevron-left"></i></a>
-      <a class="btn-floating" data-slide="next" href="#carousel-example-multi"><i
-          class="fas fa-chevron-right"></i></a>
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li class="active" data-slide-to="0" data-target="#carousel-example-multi"></li>
+    <li data-slide-to="1" data-target="#carousel-example-multi"></li>
+    <li data-slide-to="2" data-target="#carousel-example-multi"></li>
+    <li data-slide-to="3" data-target="#carousel-example-multi"></li>
+    <li data-slide-to="4" data-target="#carousel-example-multi"></li>
+    <li data-slide-to="5" data-target="#carousel-example-multi"></li>
+  </ol>
+  <!--/.Indicators-->
+
+  <div class="carousel-inner v-2" role="listbox">
+
+<!--    <div class="carousel-item active">
+      <div class="col-12 col-md-4">
+        <div class="card mb-2">
+          <img alt="Card image cap" class="card-img-top"
+               src="https://mdbootstrap.com/img/Photos/Others/img (36).jpg">
+          <div class="card-body">
+            <h4 class="card-title font-weight-bold">Card title</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the
+              bulk of the
+              card's content.</p>
+            <a class="btn btn-primary btn-md btn-rounded">Button</a>
+          </div>
+        </div>
+      </div>
+    </div>-->
+    <div class="carousel-item active">
+      <div class="col-12 col-md-4">
+        <div class="card mb-2">
+          <div class="card-body">
+            <img src="/Images/FunWithBeer.png" style="width:67%" class="card-img-top" alt="Fun With Beer">
+            <center><h4 class="card-title font-weight-bold">Fun With Beer</h4></center>
+            <p class="card-text">This is a app that provide to you information about the different types of beers of each country. You can view the beer from different forms, you can see by type of beer or you can see by continent.
+            </p>
+            <center><a href="https://github.com/Enrique92/FunWithBeer" class="btn btn-primary btn-md btn-rounded">Details</a></center>
+          </div>
+        </div>
+      </div>
     </div>
-    <!--/.Controls-->
-
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li class="active" data-slide-to="0" data-target="#carousel-example-multi"></li>
-      <li data-slide-to="1" data-target="#carousel-example-multi"></li>
-      <li data-slide-to="2" data-target="#carousel-example-multi"></li>
-      <li data-slide-to="3" data-target="#carousel-example-multi"></li>
-      <li data-slide-to="4" data-target="#carousel-example-multi"></li>
-      <li data-slide-to="5" data-target="#carousel-example-multi"></li>
-    </ol>
-    <!--/.Indicators-->
-
-    <div class="carousel-inner v-2" role="listbox">
-
-      <div class="carousel-item active">
-        <div class="col-12 col-md-4">
-          <div class="card mb-2">
-            <img alt="Card image cap" class="card-img-top"
-                 src="https://mdbootstrap.com/img/Photos/Others/img (36).jpg">
-            <div class="card-body">
-              <h4 class="card-title font-weight-bold">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up
-                the bulk of the
-                card's content.</p>
-              <a class="btn btn-primary btn-md btn-rounded">Button</a>
-            </div>
+    <div class="carousel-item">
+      <div class="col-12 col-md-4">
+        <div class="card mb-2">
+          <div class="card-body">
+            <img src="/Images/SilverBullet.png" style="width:97%" class="card-img-top" alt="Silver Bullet">
+            <center><h4 class="card-title font-weight-bold">Silver Bullet</h4></center>
+            <p class="card-text">This game was the final project of Java for the Cornerstone International Community College of Canada, develop with JavaFX and dividing the tasks between four teammates with a extraordinary teamwork and doing very enjoyable and funny.
+            </p>
+            <center><a href="https://github.com/cornerstone18aug/silver-bullet" class="btn btn-primary btn-md btn-rounded">Details</a></center>
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="col-12 col-md-4">
-          <div class="card mb-2">
-            <img alt="Card image cap" class="card-img-top"
-                 src="https://mdbootstrap.com/img/Photos/Others/img (34).jpg">
-            <div class="card-body">
-              <h4 class="card-title font-weight-bold">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up
-                the bulk of the
-                card's content.</p>
-              <a class="btn btn-primary btn-md btn-rounded">Button</a>
-            </div>
+    </div>
+    <div class="carousel-item">
+      <div class="col-12 col-md-4">
+        <div class="card mb-2">
+          <div class="card-body">
+            <img src="/Images/MyPersonalWeb.png" style="width:100%" class="card-img-top" alt="My Web Page">
+            <center><h4 class="card-title font-weight-bold">My Web Page</h4></center>
+            <p class="card-text">This is my personal web page where you can see more about myself and my personal and team projects. Also you can see more about me and my developer skills.
+            </p>
+            <center><a href="https://enrique92.github.io/" class="btn btn-primary btn-md btn-rounded">Details</a></center>
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="col-12 col-md-4">
-          <div class="card mb-2">
-            <img alt="Card image cap" class="card-img-top"
-                 src="https://mdbootstrap.com/img/Photos/Others/img (38).jpg">
-            <div class="card-body">
-              <h4 class="card-title font-weight-bold">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up
-                the bulk of the
-                card's content.</p>
-              <a class="btn btn-primary btn-md btn-rounded">Button</a>
-            </div>
+    </div>
+    <div class="carousel-item">
+      <div class="col-12 col-md-4">
+        <div class="card mb-2">
+          <div class="card-body">
+            <img src="/Images/TydierApp.png" style="width:65%" class="card-img-top" alt="Tydier">
+            <center><h4 class="card-title font-weight-bold">Tydier</h4></center>
+            <p class="card-text">This app is an Automatic Bookmark Categorizing iOS App using IBM Watson Natural Language Understanding API. Will help you to have all your bookmarks organized easily and fast.
+            </p>
+            <center><a href="https://github.com/cornerstone18aug/Tydier" class="btn btn-primary btn-md btn-rounded">Details</a></center>
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="col-12 col-md-4">
-          <div class="card mb-2">
-            <img alt="Card image cap" class="card-img-top"
-                 src="https://mdbootstrap.com/img/Photos/Others/img (29).jpg">
-            <div class="card-body">
-              <h4 class="card-title font-weight-bold">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up
-                the bulk of the
-                card's content.</p>
-              <a class="btn btn-primary btn-md btn-rounded">Button</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="col-12 col-md-4">
-          <div class="card mb-2">
-            <img alt="Card image cap" class="card-img-top"
-                 src="https://mdbootstrap.com/img/Photos/Others/img (30).jpg">
-            <div class="card-body">
-              <h4 class="card-title font-weight-bold">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up
-                the bulk of the
-                card's content.</p>
-              <a class="btn btn-primary btn-md btn-rounded">Button</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="col-12 col-md-4">
-          <div class="card mb-2">
-            <img alt="Card image cap" class="card-img-top"
-                 src="https://mdbootstrap.com/img/Photos/Others/img (27).jpg">
-            <div class="card-body">
-              <h4 class="card-title font-weight-bold">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up
-                the bulk of the
-                card's content.</p>
-              <a class="btn btn-primary btn-md btn-rounded">Button</a>
-            </div>
+    </div>
+    <div class="carousel-item">
+      <div class="col-12 col-md-4">
+        <div class="card mb-2">
+          <div class="card-body">
+            <img src="/Images/LabGeoApl.png" style="width:100%" class="card-img-top" alt="Applied Geography Laboratory">
+            <center><h4 class="card-title font-weight-bold">Applied Geography Laboratory</h4></center>
+            <p class="card-text">This was the main web page for the applied geography laboratory of University Autonoma of Madrid where you can see the main content and information about the area.
+            </p>
+            <center><a href="https://manzana86.neocities.org/web_lga/localizacion_propio.html" class="btn btn-primary btn-md btn-rounded">Details</a></center>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-<!--
-<div class="w3-container" style="padding:26px 16px" id="work">
-  <h3 class="w3-center"><b>PROJECTS</b></h3>
-  <div class="w3-row-padding" style="margin-top:64px">
-    <div class="w3-col l3 m6">
-      <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
-         <img src="/Images/FunWithBeer.png" style="width:67%" class="w3-hover-opacity center">
-      </a>
-                     <p class="descProjects"><b><u>Fun With Beer</u></b> - This is a app that provide to you information about the different types of beers of each country. You can view the beer from different forms, you can see by type of beer or you can see by continent.
-         </p>
-    </div>
-    <div class="w3-col l3 m6">
-      <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
-         <img src="/Images/SilverBullet.png" style="width:97%" class="w3-hover-opacity">
-      </a>
-               <p class="descProjects"><b><u>Silver Bullet</u></b> - This game was the final project of Java for the Cornerstone International Community College of Canada, develop with JavaFX and dividing the tasks between four teammates with a extraordinary teamwork and doing very enjoyable and funny.
-         </p>
-    </div>
-    <div class="w3-col l3 m6">
-      <a href="https://github.com/Enrique92/FunWithBeer" title="Enrique Alcaide Muñoz Web Page">
-         <img src="/Images/MyPersonalWeb.png" style="width:100%" class="w3-hover-opacity">
-      </a>
-                     <p class="descProjects"><b><u>Personal Web Page</u></b> - This is my personal web page where you can see more about myself and my personal and team projects. Also you can see more about me and my developer skills.
-         </p>
-    </div>
-    <div class="w3-col l3 m6">
-      <a href="https://manzana86.neocities.org/web_lga/localizacion_propio.html" title="
-Department of Applied Geography UAM">
-         <img src="/Images/LabGeoApl.png" style="width:100%" class="w3-hover-opacity">
-      </a>
-                     <p class="descProjects"><b><u>Applied Geography Laboratory</u></b> - This was the main web page for the applied geography laboratory of University Autonoma of Madrid where you can see the main content and information about the area.
-         </p>
-    </div>
-  </div>
-</div>
--->
 
 <!-- Modal for full size images on click-->
 <div class="w3-modal w3-black" id="modal01" onclick="this.style.display='none'">
