--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <div class="col-12 col-md-4">
         <div class="card mb-2">
           <div class="card-body">
-            <img src="/Images/FunWithBeer.png" style="width:67%" class="card-img-top" alt="Fun With Beer">
+            <center><img src="/Images/FunWithBeer.png" style="width:67%" class="card-img-top" alt="Fun With Beer"></center>
             <center><h4 class="card-title font-weight-bold">Fun With Beer</h4></center>
             <p class="card-text">This is a app that provide to you information about the different types of beers of each country. You can view the beer from different forms, you can see by type of beer or you can see by continent.
             </p>
@@ -150,7 +150,7 @@
         </div>
       </div>
     </div>
-    <div class="carousel-item">
+<!--    <div class="carousel-item">
       <div class="col-12 col-md-4">
         <div class="card mb-2">
           <div class="card-body">
@@ -162,12 +162,12 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
     <div class="carousel-item">
       <div class="col-12 col-md-4">
         <div class="card mb-2">
           <div class="card-body">
-            <img src="/Images/TydierApp.png" style="width:65%" class="card-img-top" alt="Tydier">
+            <center><img src="/Images/TydierApp.png" style="width:45%" class="card-img-top" alt="Tydier"></center>
             <center><h4 class="card-title font-weight-bold">Tydier</h4></center>
             <p class="card-text">This app is an Automatic Bookmark Categorizing iOS App using IBM Watson Natural Language Understanding API. Will help you to have all your bookmarks organized easily and fast.
             </p>
@@ -176,7 +176,7 @@
         </div>
       </div>
     </div>
-    <div class="carousel-item">
+<!--    <div class="carousel-item">
       <div class="col-12 col-md-4">
         <div class="card mb-2">
           <div class="card-body">
@@ -188,7 +188,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
   </div>
 </div>
 
