--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     <li data-slide-to="1" data-target="#carousel-example-multi"></li>
     <li data-slide-to="2" data-target="#carousel-example-multi"></li>
     <li data-slide-to="3" data-target="#carousel-example-multi"></li>
-    <li data-slide-to="4" data-target="#carousel-example-multi"></li>
-    <li data-slide-to="5" data-target="#carousel-example-multi"></li>
+<!--    <li data-slide-to="4" data-target="#carousel-example-multi"></li>
+    <li data-slide-to="5" data-target="#carousel-example-multi"></li>-->
   </ol>
   <!--/.Indicators-->
 
