--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </div>
 
 <!--class="w3-container"-->
-<div id="work" style="padding:26px 16px">
+<div id="work" style="padding:26px 16px 36px">
 <h3 class="w3-center"><b>PROJECTS</b></h3>
 <div class="carousel slide carousel-multi-item v-2" data-ride="carousel"
      id="carousel-example-multi">
@@ -167,7 +167,7 @@
       <div class="col-12 col-md-4">
         <div class="card mb-2">
           <div class="card-body">
-            <center><img src="/Images/TydierApp.png" style="width:45%" class="card-img-top" alt="Tydier"></center>
+            <center><img src="/Images/TydierApp.png" style="width:67%" class="card-img-top" alt="Tydier"></center>
             <center><h4 class="card-title font-weight-bold">Tydier</h4></center>
             <p class="card-text">This app is an Automatic Bookmark Categorizing iOS App using IBM Watson Natural Language Understanding API. Will help you to have all your bookmarks organized easily and fast.
             </p>
