--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
   <h3 class="w3-center"><b>PROJECTS</b></h3>
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img alt="Silver Bullet" class="card-img-top" src="/Images/SilverBullet.png"
-           style="width:97%">
-      <center><h4 class="card-title font-weight-bold">Silver Bullet</h4></center>
-      <p class="card-text">This game was the final project of Java for the Cornerstone International
-        Community College of Canada, develop with JavaFX and dividing the tasks between four
-        teammates with a extraordinary teamwork and doing very enjoyable and funny.
+      <center><img alt="Fun With Beer" class="card-img-top" src="/Images/FunWithBeer.png"
+                   style="width:67%"></center>
+      <center><h4 class="card-title font-weight-bold">Fun With Beer</h4></center>
+      <p class="card-text">This is a app that provide to you information about the different types
+        of beers of each country. You can view the beer from different forms, you can see by type of
+        beer or you can see by continent.
       </p>
       <center><a class="btn btn-primary btn-md btn-rounded"
-                 href="https://github.com/cornerstone18aug/silver-bullet">Details</a></center>
+                 href="https://github.com/Enrique92/FunWithBeer">Details</a></center>
     </div>
     <div class="w3-col l3 m6">
       <img alt="Silver Bullet" class="card-img-top" src="/Images/SilverBullet.png"
@@ -118,11 +118,14 @@
                  href="https://github.com/cornerstone18aug/Tydier">Details</a></center>
     </div>
     <div class="w3-col l3 m6">
-      <img src="/Images/MyPersonalWeb.png" style="width:100%" class="card-img-top" alt="My Web Page">
+      <img alt="My Web Page" class="card-img-top" src="/Images/MyPersonalWeb.png"
+           style="width:100%">
       <center><h4 class="card-title font-weight-bold">My Web Page</h4></center>
-      <p class="card-text">This is my personal web page where you can see more about myself and my personal and team projects. Also you can see more about me and my developer skills.
+      <p class="card-text">This is my personal web page where you can see more about myself and my
+        personal and team projects. Also you can see more about me and my developer skills.
       </p>
-      <center><a href="https://enrique92.github.io/" class="btn btn-primary btn-md btn-rounded">Details</a></center>
+      <center><a class="btn btn-primary btn-md btn-rounded" href="https://enrique92.github.io/">Details</a>
+      </center>
     </div>
   </div>
 </div>
@@ -224,6 +227,7 @@ function w3_open() {
 function w3_close() {
     mySidebar.style.display = "none";
 }
+
 
 
 
