Update Tydier URL
Update Tydier URL

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         easily and fast.
       </p>
       <center><a class="btn btn-primary btn-md btn-rounded"
-                 href="https://github.com/cornerstone18aug/Tydier">Details</a></center>
+                 href="https://apps.apple.com/us/app/tydier/id1476891210?ls=1">Details</a></center>
     </div>
     <div class="w3-col l3 m6">
       <img alt="My Web Page" class="card-img-top" src="/Images/MyPersonalWeb.png"
